# semester-6-db-app

./: .env.example  .gitignore  alembic.ini  pyproject.toml  ruff.toml
fixtures/: data.json
src/: consts.py  main.py
src/apps/core/: services.py
src/apps/core/infrastructure/: models.py  repositories.py  routers.py  schemas.py
src/apps/core/infrastructure/routers/: additional.py  base.py
src/apps/users/: services.py
src/apps/users/infrastructure/: models.py  repositories.py  routers.py  schemas.py
src/infrastructure/: repositories.py
src/infrastructure/db/: config.py
src/infrastructure/db/fixtures/: generate.py  load.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 4a0388d8a781_.py  5a52942c7d62_.py  5ec897005d07_.py  60d63a5834fb_.py  90503454400b_.py  976049bc0a3a_.py  ab5f6ddae149_.py
src/infrastructure/db/utils/: generate_diagramm.py  migrations.py
src/templates/: index.html
