[project]
name = "inner-chat-backend"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "environs>=14.1.1",
    "eralchemy2>=1.4.1",
    "faker>=37.3.0",
    "fastapi>=0.115.12",
    "psycopg2>=2.9.10",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]
